[package]
edition = "2021"
name = "ckb-debugger-tests"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-debugger-api = { git = "https://github.com/quake/ckb-standalone-debugger", branch="quake/ckb2023" }
ckb-mock-tx-types =  { git = "https://github.com/quake/ckb-standalone-debugger", branch="quake/ckb2023" }
molecule = { version = "0.7.5", default-features = false }
ckb-hash = "=0.111.0-rc3"
ckb-jsonrpc-types = "=0.111.0-rc3"
ckb-types = "=0.111.0-rc3"
ckb-crypto = "=0.111.0-rc3"
env_logger = "0.4.3"
anyhow = "1.0.70"
lazy_static = "1.4.0"
log = "0.4.0"
serde_json = "1.0"
serde_plain = "1.0"
clap = { version = "4.3.0", features = ["derive"] }
